--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
             android:orientation="vertical">
 
             <TextView
@@ -50,7 +51,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Model Terbaru"
+                android:text="Motif Plafon"
                 android:textColor="@color/main"
                 android:textSize="20sp"></TextView>
 
@@ -111,24 +112,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Plafon"
+                    android:text="Produk Populer"
                     android:fontFamily="@font/poppins_semibold"
                     android:textSize="20sp"
                     android:layout_marginLeft="15dp"
                     android:textColor="@color/main">
-                </TextView>
-
-                <TextView
-                    android:id="@+id/selengkapnyaPlafon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:text="Selengkapnya"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="15dp"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:textColor="@color/oren">
                 </TextView>
 
             </RelativeLayout>
