--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,14 +92,6 @@
 
         </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginTop="15dp"
-            android:elevation="6dp"
-            app:cardCornerRadius="10dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -122,7 +114,7 @@
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/plafon"
+                android:id="@+id/produk_populer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -131,8 +123,6 @@
             </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
