--- a/app/src/main/res/layout/kategori_list.xml
+++ b/app/src/main/res/layout/kategori_list.xml
@@ -8,7 +8,8 @@
     android:layout_margin="5dp"
     android:layout_height="50dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
