--- a/app/src/main/res/layout/activity_semua_produk.xml
+++ b/app/src/main/res/layout/activity_semua_produk.xml
@@ -18,12 +18,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/show_allProdukRV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
