--- a/app/src/main/res/layout/activity_semua_produk.xml
+++ b/app/src/main/res/layout/activity_semua_produk.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
         android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
