Update new fiture

--- a/app/src/main/res/layout/activity_keranjang.xml
+++ b/app/src/main/res/layout/activity_keranjang.xml
@@ -42,7 +42,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/bayarsekarangBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -70,7 +70,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/bayarsekarangBtn"
         android:layout_width="300dp"
         android:layout_marginTop="10dp"
         android:layout_height="55dp"
