--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,11 +33,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rec_kategori"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginTop="5dp"></androidx.recyclerview.widget.RecyclerView>
 
         <LinearLayout
             android:layout_width="match_parent"
