--- a/app/src/main/res/layout/list_keranjang.xml
+++ b/app/src/main/res/layout/list_keranjang.xml
@@ -22,24 +22,46 @@
             android:layout_marginTop="12dp"
             android:fontFamily="@font/poppins"
             android:singleLine="true"
-            android:textSize="14sp"
             android:text="Nama Produk"
             android:textColor="@color/white"
+            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/product_image"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/variasiText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins"
+            android:text="Variasi"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="@+id/product_name"
+            app:layout_constraintTop_toBottomOf="@+id/product_name" />
+
+        <TextView
+            android:id="@+id/cicilanText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/poppins"
+            android:text="Cicilan"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@+id/product_image"
+            app:layout_constraintTop_toBottomOf="@+id/variasiText" />
 
         <TextView
             android:id="@+id/product_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:textSize="14sp"
             android:fontFamily="@font/poppins"
             android:text="Rp 44.000"
             android:textColor="@color/white"
+            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/product_image"
-            app:layout_constraintTop_toBottomOf="@+id/product_name" />
+            app:layout_constraintTop_toBottomOf="@+id/cicilanText" />
 
         <ImageView
             android:id="@+id/product_image"
@@ -55,11 +77,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/white"
             android:fontFamily="@font/poppins"
-            android:textSize="14sp"
             android:text="Qty : 2"
+            android:textColor="@color/white"
+            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/product_image"
             app:layout_constraintTop_toBottomOf="@+id/product_price" />
 
@@ -74,8 +95,17 @@
             android:textColor="@color/oren"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/deleteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="3dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/total_quantity" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/baseline_delete_forever_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
