--- a/app/src/main/res/layout/activity_detail_transaksi.xml
+++ b/app/src/main/res/layout/activity_detail_transaksi.xml
@@ -77,7 +77,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="Jalan Gaming No.32"
+                android:text=""
                 android:textColor="@color/oren"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
