--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,16 +29,31 @@
         android:id="@+id/logoutBtn"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="12dp"
         android:backgroundTint="@color/main"
         android:fontFamily="@font/poppins_semibold"
         android:text="Keluar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/editProfileBtn"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="0dp"
+        android:backgroundTint="@color/main"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Edit Profile"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -58,10 +73,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Fadil Munandar"
-        android:textSize="18sp"
-        android:textColor="@color/oren"
         android:fontFamily="@font/poppins_bold"
+        android:text="Fadil Munandar"
+        android:textColor="@color/oren"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/circleImageView">
@@ -108,9 +123,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins_medium"
-        android:textSize="14sp"
-        android:textColor="@color/oren"
         android:text="085377616611"
+        android:textColor="@color/oren"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/imageviewphone"
         app:layout_constraintTop_toBottomOf="@+id/email_profile" />
 
