--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,40 +54,35 @@
                 android:textColor="@color/main"
                 android:textSize="20sp"></TextView>
 
-            <HorizontalScrollView
+            <ViewFlipper
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
-                android:isScrollContainer="true"
-                android:overScrollMode="always"
-                android:padding="20dp">
+                android:layout_height="wrap_content"
+                android:autoStart="true"
+                android:inAnimation="@android:anim/slide_in_left"
+                android:outAnimation="@android:anim/slide_out_right"
+                android:flipInterval="1600">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    app:srcCompat="@drawable/model1"></ImageView>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        app:srcCompat="@drawable/model1"></ImageView>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_horizontal"
+                    app:srcCompat="@drawable/model2"></ImageView>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_horizontal"
-                        app:srcCompat="@drawable/model2"></ImageView>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_horizontal"
+                    app:srcCompat="@drawable/model3"></ImageView>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_horizontal"
-                        app:srcCompat="@drawable/model3"></ImageView>
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
+            </ViewFlipper>
 
         </LinearLayout>
 
