Add New Feature + Fixed Bug
- Riwayat Belanja [USER]
- Admin Panel [Add & View Produk, Profile Panel For Admin, Delete Button at Pesanan]
- Fixed Bug [Crash while scroll at Keranjang, TextUtils in Add Product not work]

--- a/app/src/main/res/layout/activity_ap_produk.xml
+++ b/app/src/main/res/layout/activity_ap_produk.xml
@@ -4,6 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main"
     tools:context=".Activity.AP_Produk">
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Produk"
+        android:textColor="@color/white"
+        android:textSize="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/tambahprodukCV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="60dp"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView30">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/tp_animation"
+            android:layout_margin="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:lottie_url="https://assets5.lottiefiles.com/packages/lf20_wXvd7g0NWI.json"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tambah \nProduk"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/main"
+            android:textAlignment="center"
+            android:textSize="24dp"
+            android:layout_marginRight="40dp"
+            android:layout_gravity="right"
+            tools:ignore="RtlCompat">
+        </TextView>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/daftarprodukCV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tambahprodukCV">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lp_animation"
+            android:layout_margin="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:lottie_url="https://assets7.lottiefiles.com/packages/lf20_roylwd7o.json"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Daftar \nProduk"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/main"
+            android:textAlignment="center"
+            android:textSize="24dp"
+            android:layout_marginRight="50dp"
+            android:layout_gravity="right"
+            tools:ignore="RtlCompat">
+        </TextView>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
