--- a/app/src/main/res/layout/activity_konfirmasi_pembayaran.xml
+++ b/app/src/main/res/layout/activity_konfirmasi_pembayaran.xml
@@ -174,7 +174,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -202,18 +202,34 @@
                 android:id="@+id/buttonKP"
                 android:layout_width="300dp"
                 android:layout_height="55dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:backgroundTint="@color/main"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Chat Penjual"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView28" />
+
+            <Button
+                android:id="@+id/belanjalagiBtn"
+                android:layout_width="300dp"
+                android:layout_height="55dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="5dp"
+                android:backgroundTint="@color/main"
+                android:text="Belanja Lagi"
+                android:textAllCaps="false"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView28"
-                app:layout_constraintVertical_bias="0.309" />
+                app:layout_constraintTop_toBottomOf="@+id/buttonKP"
+                app:layout_constraintVertical_bias="0.0" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
