--- a/app/src/main/res/layout/list_pesanan.xml
+++ b/app/src/main/res/layout/list_pesanan.xml
@@ -39,12 +39,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="@font/poppins_bold"
             android:text="24/02/2023"
             android:textColor="@color/oren"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/deletePsnBtn">
 
         </TextView>
 
@@ -104,6 +104,16 @@
             app:layout_constraintStart_toEndOf="@+id/alamatLP">
 
         </TextView>
+
+        <ImageView
+            android:id="@+id/deletePsnBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/baseline_delete_forever_24" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
